fr3_mujoco_ws/log/build_2025-06-04_17-18-10/franka_mujoco_controller/stderr.log
  File "/media/kai/Kai_Backup/Master_Study/Master_Thesis/Master_Study_Master_Thesis/fr3_mujoco_ws/install/franka_mujoco_controller/lib/python3.10/site-packages/franka_mujoco_controller/position_control.py", line 28
    "
    ^
SyntaxError: unterminated string literal (detected at line 28)

